fix dashboardinfo card overflow

--- a/virtualBeacon_front/src/components/style/DashboardInfo.css
+++ b/virtualBeacon_front/src/components/style/DashboardInfo.css
@@ -115,7 +115,9 @@
 }
 
 .DashboardInfo-lists-card-info {
-  padding: 10px;
+  max-width: 90%;
+  padding: 5px;
+  overflow: hidden;
 }
 
 @media only screen and (max-width: 500px) {
